# PBL1_DUT

./: .gitignore  CMakeLists.txt  README.md  report.md  understandRequire.md
.codegraph/: daemon.pid
docs/: restaurant-ordering-platform-analysis.md  ux-ui-console-review.md
docs/implementation/: 01-foundation-architecture-plan.md  02-database-seed-plan.md  03-policy-layer-plan.md  04-console-runtime-plan.md  05-core-business-flow-plan.md  06-recommendation-latent-factor-plan.md  07-testing-demo-plan.md  README.md
docs/modules/: 00-policy-layer.md  01-tenant-restaurant-branch.md  02-table-dining-session.md  03-menu-catalog.md  04-food-recommendation.md  04a-ai-ml-latent-factor-deep-dive.md  05-order-management.md  06-pricing-tax-fee-promotion.md  07-payment-billing.md  08-kitchen-preparation-routing.md  09-device-management.md  10-notification.md  11-inventory-availability.md  12-staff-role-permission.md  13-reporting.md  14-audit-configuration-versioning.md  15-console-mvp-runtime.md  README.md
docs/product-design/: README.md  code-vs-product-design-gap-report.md
docs/report/: Mẫu báo cáo đồ án của GVHD (2).docx  bao-cao-do-an-dat-mon-de-xuat.docx  baocaopbl.docx
scripts/: README.md  bar.bat  build.bat  cashier.bat  customer_T01.bat  kitchen.bat  manager.bat  reset.bat  run.bat  server.bat  start_all.bat  start_web_demo.bat  stop_and_reset.bat
scripts/demo/: start_console_demo.bat  start_web_demo.bat
scripts/legacy/: bar.bat  cashier.bat  customer_T01.bat  reset.bat  (+5 more)
src/: main.cpp
web/: cashier.html  customer.html  index.html  kitchen.html  manager.html
(+181 files in other folders)
